<resources>
    <string name="app_name">FDAStream</string>
    <string name="title_activity_list_single_card">list_single_card</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_catalogue">CatalogueActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_title">Home</string>
    <string name="catalogue_title">Catalogue</string>
    <string name="purchase_title">Buy DVD</string>
    <string name="settings_title">Settings</string>
    <string name="account_title">Account</string>
    <string name="share_title">Share</string>
    <string name="about_title">About</string>
    <string name="title_activity_video">Video</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_description">Description</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_account">AccountActivity</string>

    <!-- Fonts -->
    <string name="defaultFont">fonts/coolvetica_rg.ttf</string>
</resources>
